Adding new models, adding logic for getting the path, add logic for search

--- a/static/tpl/HomeView.html
+++ b/static/tpl/HomeView.html
@@ -1,4 +1,31 @@
 <div class="container">
-      Home
+      <div class="row" id="home">
+          <div class="col-md-6 img-rounded">
+              <h3>About The App</h3>
+              <p> Six Degrees of Kevin Bacon is a parlor game based on the "six degrees of separation" concept,
+                  which posits that any two people on Earth are six or fewer acquaintance links apart.
+                  That idea eventually morphed into this parlor game, wherein movie buffs challenge each other
+                  to find the shortest path between an arbitrary actor and prolific Hollywood
+                  character actor Kevin Bacon. It rests on the assumption that any individual involved in the Hollywood,
+                  California, film industry can be linked through his or her film roles to Kevin Bacon within six steps.
+                  The game requires a group of players to try to connect any such individual to Kevin Bacon as quickly
+                  as possible and in as few links as possible. It can also be described as a trivia game based on
+                  the concept of the small world phenomenon. In 2007, Bacon started
+                  a charitable organization named <a href="http://SixDegrees.org">SixDegrees.org</a>.
+
+
+              </p>
+          </div>
+
+          <div class="col-md-6 img-rounded">
+              <h3>About Me</h3>
+
+              <address>
+                  <strong>Ashkan Nasseri</strong><br>
+                  <a href="mailto:#">ashkan.nasseri@gmail.com</a>
+              </address>
+          </div>
+
+      </div>
 </div>
 
