--- a/static/tpl/HeaderView.html
+++ b/static/tpl/HeaderView.html
@@ -4,12 +4,9 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">KB-Degree</a>
             </div>
-            <form class="navbar-form navbar-right" role="search">
-                <div class="form-group">
-                    <input type="text" id="searchText" class="form-control search-query search-query" placeholder="Search"/>
-                </div>
+            <form class="navbar-form navbar-right navbar-search dropdown">
+                <input id="searchText" type="text" class="form-control search-query dropdown-toggle" placeholder="Search" autocomplete="off">
             </form>
-
         </div>
     </div>
 </nav>
