Added loading modal

--- a/static/index.html
+++ b/static/index.html
@@ -26,8 +26,19 @@
     <div class="row">
         <div id="content" class="span12>"></div>
     </div>
-
 </div>
+
+<!-- loading modal -->
+<div class="modal" id="pleaseWaitDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="images/loading.gif" class="center-block"/>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- -->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
