--- a/static/tpl/ArtistListItemView.html
+++ b/static/tpl/ArtistListItemView.html
@@ -1,4 +1,8 @@
 <a href='#artist/<%= name %>'>
+    <% if (image !== '') { %>
     <img width="50" height="50" src="<%= image %>" style="float:left;"/>
+    <% } else { //we don't have artist image, show default %>
+    <img width="50" height="50" src="images/no-artist.png" style="float:left;"/>
+    <% } %>
     <p class="list-item"><%= name %><br /></p>
 </a>
