--- a/static/tpl/ArtistView.html
+++ b/static/tpl/ArtistView.html
@@ -1,4 +1,4 @@
 <a href='#artist/<%= name %>'>
-    <img src="<%= image %>" style="float:left;"/>
+    <img src="<%= image %>" class="img-circle"/>
     <p><%= name %><br /></p>
 </a>
