--- a/static/tpl/ArtistView.html
+++ b/static/tpl/ArtistView.html
@@ -1,4 +1,4 @@
 <a href='#artist/<%= name %>'>
-    <img src="<%= image %>" class="img-circle"/>
+    <img src="<%= image %>" class="img-circle" style="float: left;"/>
     <p><%= name %><br /></p>
 </a>
