--- a/static/tpl/ArtistView.html
+++ b/static/tpl/ArtistView.html
@@ -1,4 +1,10 @@
-<a href='#artist/<%= name %>'>
-    <img src="<%= image %>" class="img-circle" style="float: left;"/>
-    <p><%= name %><br /></p>
-</a>
+    <div class="col-xs-3">
+        <% if (type === 1) { %>
+            <img src="<%= image %>" class="img-circle img-responsive"/>
+        <% } else if (type === 2) { %>
+            <img src="<%= image %>" class="img-rounded img-responsive"/>
+        <% } %>
+        <div class="caption">
+            <h3><%= name %></h3>
+        </div>
+    </div>
