--- a/static/tpl/ArtistView.html
+++ b/static/tpl/ArtistView.html
@@ -1,10 +1,17 @@
+<div> Distance = <%= distance %></div>
+
+<div class="row" id="paths">
+    <% _.each(path, function(path_item){%>
     <div class="col-xs-2">
-        <% if (type === 1) { %>
-            <img src="<%= image %>" class="img-circle img-responsive"/>
-        <% } else if (type === 2) { %>
-            <img src="<%= image %>" class="img-rounded img-responsive"/>
+        <% if (path_item['type'] === 1) { %>
+        <img src="<%= path_item['image'] %>" class="img-circle img-responsive"/>
+        <% } else if (path_item['type'] === 2) { %>
+        <img src="<%= path_item['image'] %>" class="img-rounded img-responsive"/>
         <% } %>
         <div class="caption">
-            <h3><%= name %></h3>
+            <h3><%= path_item['name'] %></h3>
         </div>
     </div>
+    <% }); %>
+
+</div>
