--- a/static/tpl/ArtistView.html
+++ b/static/tpl/ArtistView.html
@@ -2,14 +2,25 @@
 
 <div class="row" id="paths">
     <% _.each(path, function(path_item){%>
-    <div class="col-xs-2">
+    <% if (path_item['image'] === '') {
+        // if this artist doesn't have an image show default image
+        path_item['image'] = 'images/no-artist.png';
+    }
+
+    var col_size = 2;
+    if (path.length > 6) {
+        col_size = 1;
+    }
+    %>
+
+    <div class="col-xs-<%= col_size %>">
         <% if (path_item['type'] === 1) { %>
         <img src="<%= path_item['image'] %>" class="img-circle img-responsive"/>
         <% } else if (path_item['type'] === 2) { %>
         <img src="<%= path_item['image'] %>" class="img-rounded img-responsive"/>
         <% } %>
         <div class="caption">
-            <h3><%= path_item['name'] %></h3>
+            <h4><%= path_item['name'] %></h4>
         </div>
     </div>
     <% }); %>
