--- a/static/tpl/ArtistView.html
+++ b/static/tpl/ArtistView.html
@@ -1,5 +1,6 @@
-<div> Distance = <%= distance %></div>
-
+<div class="row">
+    <h2> <%= id %> degree of separation is <%= distance %></h2>
+</div>
 <div class="row" id="paths">
     <% _.each(path, function(path_item){%>
     <% if (path_item['image'] === '') {
@@ -15,9 +16,9 @@
 
     <div class="col-xs-<%= col_size %>">
         <% if (path_item['type'] === 1) { %>
-        <img src="<%= path_item['image'] %>" class="img-circle img-responsive"/>
+        <img src="<%= path_item['image'] %>" class="img-circle img-responsive fadeIn"/>
         <% } else if (path_item['type'] === 2) { %>
-        <img src="<%= path_item['image'] %>" class="img-rounded img-responsive"/>
+        <img src="<%= path_item['image'] %>" class="img-rounded img-responsive fadeIn"/>
         <% } %>
         <div class="caption">
             <h4><%= path_item['name'] %></h4>
