Some ui changes

--- a/static/tpl/ArtistListItemView.html
+++ b/static/tpl/ArtistListItemView.html
@@ -4,5 +4,5 @@
     <% } else { //we don't have artist image, show default %>
     <img width="50" height="50" src="images/no-artist.png" style="float:left;"/>
     <% } %>
-    <p class="list-item"><%= name %><br /></p>
+    <h5 class="list-item "><%= name %></h5>
 </a>
