Added more stuff on home page

--- a/static/tpl/HomeView.html
+++ b/static/tpl/HomeView.html
@@ -1,6 +1,6 @@
 <div class="container">
       <div class="row" id="home">
-          <div class="col-md-6 img-rounded">
+          <div class="col-md-4">
               <h3>About The App</h3>
               <p> Six Degrees of Kevin Bacon is a parlor game based on the "six degrees of separation" concept,
                   which posits that any two people on Earth are six or fewer acquaintance links apart.
@@ -17,9 +17,29 @@
               </p>
           </div>
 
-          <div class="col-md-6 img-rounded">
-              <h3>About Me</h3>
+          <div class="col-md-4">
+              <h3>Get The Code!</h3>
 
+              <p>
+                  This app is written in Python(flask), Bootstrap and Backbone.
+
+                  You can get the code from:
+                  <a href="https://github.com/ashkan18/kbacon" class="btn-link">
+                    Github
+                  </a>
+              </p>
+          </div>
+
+          <div class="col-md-4 ">
+              <h3>About Me</h3>
+              <img class="thumbnail pull-right" src="images/me.jpg" style="width: 100px; height: 100px; margin-left: 5px"/>
+
+              <p> I'm Ashkan Nasseri, a Software Engineer who is passionate about learning new technologies.
+              I got my BS in Software Engineering from University of Tehran and got my MS in Computer System Engineering from
+              Northeastern University.</p>
+
+              <p>On my spare time, I make <a href="http://www.imdb.com/name/nm5298162/" target="_blank">short movies</a> and work on
+              my <a href="http://www.zazzle.com/ashkinas" target="_blank">t-shirt designs</a> or work on my music band(6:30).</p>
               <address>
                   <strong>Ashkan Nasseri</strong><br>
                   <a href="mailto:#">ashkan.nasseri@gmail.com</a>
