Added more content to home page

--- a/static/tpl/HomeView.html
+++ b/static/tpl/HomeView.html
@@ -21,8 +21,18 @@
               <h3>Get The Code!</h3>
 
               <p>
-                  This app is written in Python(flask), Bootstrap and Backbone.
-
+                  This app is written in Python(Flask), Bootstrap and Backbone.
+              </p>
+              <p>
+                  On the back-end, we have three layers.
+                  <ul>
+                    <li>Interface layer: Where we define the routes and endpoints</li>
+                    <li>Services layer: Where we have the core logic for example finding the path from each artist
+                    to Kevin Bacon</li>
+                    <li>Data layer: Which handles storing and fetching the data from the data structure.</li>
+                  </ul>
+                  On the front-end, I used bootstrap to get the proper layout and css classes, and used backbone for
+                  handling client side logic, calling to server and render the ui.
                   You can get the code from:
                   <a href="https://github.com/ashkan18/kbacon" class="btn-link">
                     Github
