--- a/static/tpl/ArtistView.html
+++ b/static/tpl/ArtistView.html
@@ -7,6 +7,7 @@
         // if this artist doesn't have an image show default image
         path_item['image'] = 'images/no-artist.png';
     }
+    // show the proper grid based on number of items in the path
     var col_size = Math.floor(12/(path.length));
     %>
 
