Introducing artist id, this way we don't have to use artist name for getting artist detail in the url

--- a/static/tpl/ArtistListItemView.html
+++ b/static/tpl/ArtistListItemView.html
@@ -1,4 +1,4 @@
-<a href='#artist/<%= name %>'>
+<a href='#artist/<%= id %>'>
     <% if (image !== '') { %>
     <img width="50" height="50" src="<%= image %>" style="float:left;"/>
     <% } else { //we don't have artist image, show default %>
