--- a/static/tpl/ArtistView.html
+++ b/static/tpl/ArtistView.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h2 class="text-center"> <%= id %> degree of separation is <%= distance %></h2>
+    <h2 class="text-center"> <%= name %> degree of separation is <%= distance %></h2>
 </div>
 <div class="row text-center" id="paths">
     <% _.each(path, function(path_item, i){%>
