--- a/static/tpl/HomeView.html
+++ b/static/tpl/HomeView.html
@@ -34,7 +34,7 @@
                   On the front-end, I used bootstrap to get the proper layout and css classes, and used backbone for
                   handling client side logic, calling to server and render the ui.
                   You can get the code from:
-                  <a href="https://github.com/ashkan18/kbacon" class="btn-link">
+                  <a href="https://github.com/ashkan18/kbacon" target="_blank">
                     Github
                   </a>
               </p>
