--- a/static/index.html
+++ b/static/index.html
@@ -51,14 +51,14 @@
 <script src="js/templateLoader.js"></script>
 
 <!-- models -->
-<script src="js/models/artist.js"></script>
+<script src="js/models/artistModel.js"></script>
 
 
 <!-- views -->
-<script src="js/views/header.js"></script>
-<script src="js/views/home.js"></script>
-<script src="js/views/artist.js"></script>
-<script src="js/views/artistlist.js"></script>
+<script src="js/views/headerView.js"></script>
+<script src="js/views/homeView.js"></script>
+<script src="js/views/artisView.js"></script>
+<script src="js/views/searchList.js"></script>
 
 <script src="js/app.js"></script>
 </body>
