Cleaned up more dropdown issues

--- a/static/tpl/SearchListItemView.html
+++ b/static/tpl/SearchListItemView.html
@@ -1,8 +1,8 @@
 <a href='#artist/<%= id %>'>
     <% if (image !== '') { %>
-    <img width="50" height="50" src="<%= image %>" style="float:left;"/>
+    <img width="40" height="40" src="<%= image %>" class="img-rounded" style="float:left;"/>
     <% } else { //we don't have artist image, show default %>
-    <img width="50" height="50" src="images/no-artist.png" style="float:left;"/>
+    <img width="40" height="40" src="images/no-artist.png" class="img-rounded" style="float:left;"/>
     <% } %>
     <h5 class="list-item "><%= name %></h5>
 </a>
