removed debug console messages

--- a/static/tpl/HeaderView.html
+++ b/static/tpl/HeaderView.html
@@ -5,7 +5,7 @@
                 <a class="navbar-brand" href="#">KB-Degree</a>
             </div>
             <form class="navbar-form navbar-right navbar-search dropdown">
-                <input id="searchText" type="text" class="form-control search-query dropdown-toggle" placeholder="Search" autocomplete="off">
+                <input id="searchText" type="text" class="form-control search-query dropdown-toggle" placeholder="Search For Artist" autocomplete="off">
             </form>
         </div>
     </div>
