--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,7 @@
 <!-- views -->
 <script src="js/views/headerView.js"></script>
 <script src="js/views/homeView.js"></script>
-<script src="js/views/artisView.js"></script>
+<script src="js/views/artistView.js"></script>
 <script src="js/views/searchList.js"></script>
 
 <script src="js/app.js"></script>
