--- a/static/index.html
+++ b/static/index.html
@@ -45,21 +45,11 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js"></script>
 
 <!-- helper class -->
-<script src="js/templateLoader.js"></script>
-
-<!-- models -->
-<script src="js/models/artistModel.js"></script>
 
 
-<!-- views -->
-<script src="js/views/headerView.js"></script>
-<script src="js/views/homeView.js"></script>
-<script src="js/views/artistView.js"></script>
-<script src="js/views/searchList.js"></script>
+<script src="js/KBDegree.min.js"></script>
 
-<script src="js/app.js"></script>
 </body>
 </html>
